multicode assets and details added

--- a/index.html
+++ b/index.html
@@ -4,13 +4,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="keywords" content="HTML Template, site template, seo, marketing, creative, corporate, modern, multipurpose, one page, business, responsive, minimal, saas, startup">
-		<meta name="author" content="LiquidThemes">
-		<meta name="description" content="Hub is a HTML template with high performance, and award-winning design collection.">
-		<meta property="og:title" content="Hub HTML template">
-		<meta property="og:description" content="Hub is a HTML template with high performance, and award-winning design collection.">
-		<meta property="og:type" content="website">
-		<meta property="og:image" content="./assets/images/common/og-image.jpg">
+
 
 		<link rel="stylesheet" href="./assets/vendors/liquid-icon/lqd-essentials/lqd-essentials.min.css">
 		<link rel="stylesheet" href="./assets/css/theme.min.css">
@@ -23,7 +17,7 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
 
-		<title>Company</title>
+		<title>Multibank</title>
 	</head>
 
 	<body class="lqd-preloader-style-fade lqd-sticky-footer-shadow-2 lqd-search-style-slide-top" data-localscroll-offset="72" data-mobile-nav-breakpoint="1199" data-mobile-nav-style="classic" data-mobile-nav-scheme="light" data-mobile-nav-trigger-alignment="right" data-mobile-header-scheme="gray" data-mobile-logo-alignment="default" data-overlay-onmobile="false">
@@ -42,7 +36,7 @@
 										</svg>
 									</span>
 								</div>
-								<h3 class="m-0 text-13 font-normal text-white iconbox-heading">invest@liquid.com</h3>
+								<h3 class="m-0 text-13 font-normal text-white iconbox-heading">sales@mbt.com.na</h3>
 							</div>
 							<div class="iconbox items-center mb-0 ml-20 pl-25 border-left border-white-10">
 								<div class="iconbox-icon-wrap mr-10">
@@ -52,7 +46,7 @@
 										</svg>
 									</span>
 								</div>
-								<h3 class="iconbox-heading m-0 text-13 font-normal text-white">14th Street, Soho</h3>
+								<h3 class="iconbox-heading m-0 text-13 font-normal text-white">Maerua Mall GoWork Office Windhoek </h3>
 							</div>
 						</div>
 					</div>
@@ -111,8 +105,8 @@
 					<div class="w-15percent flex items-center justify-start">
 						<a class="navbar-brand flex relative py-15" href="./index-company.html" rel="home">
 							<span class="navbar-brand-inner post-rel">
-								<img class="logo-sticky" width="74" height="21" src="./assets/images/demo/company/logo.png" alt="Hub Theme">
-								<img class="logo-default" width="74" height="21" src="./assets/images/demo/company/logo.png" alt="Hub Theme">
+								<img class="logo-sticky" width="80" height="30" src="./assets/images/demo/company/multicode-logo-2.png" alt="Hub Theme">
+								<img class="logo-default" width="80" height="30" src="./assets/images/demo/company/multicode-logo-2.png" alt="Hub Theme">
 							</span>
 						</a>
 					</div>
@@ -121,14 +115,15 @@
 							<div class="navbar-collapse lqd-submenu-default-style inline-flex h-auto p-0" id="main-header-collapse" aria-expanded="false" role="navigation">
 								<ul class="main-nav flex reset-ul inline-ul lqd-menu-counter-right lqd-menu-items-inline main-nav-hover-fade-inactive lqd-submenu-toggle-hover link-14 link-bold" data-submenu-options='{"toggleType": "fade", "handler": "mouse-in-out"}' data-localscroll="true" data-localscroll-options='{"itemsSelector":"> li > a", "trackWindowScroll": true}'>
 									<li class="inline-flex flex-col relative w-auto is-active">
-										<a class="text-white hover:text-primary" href="#banner">Home<sup class="link-sup">01</sup></a>
+										<a class="text-white hover:text-primary" href="#banner">Home<sup class="link-sup"></sup></a>
 									</li>
 									<li class="inline-flex flex-col relative w-auto">
-										<a class="text-white hover:text-primary" href="./page-company-about.html">About Us<sup class="link-sup">02</sup></a>
+										<a class="text-white hover:text-primary" href="./page-company-about.html">About Us<sup class="link-sup"></sup></a>
 									</li>
 									<li class="inline-flex flex-col relative w-auto">
-										<a class="text-white hover:text-primary" href="./page-company-services.html">Services<sup class="link-sup">03</sup></a>
+										<a class="text-white hover:text-primary" href="./page-company-services.html">Services<sup class="link-sup"></sup></a>
 									</li>
+									<!--
 									<li class="menu-item-has-children inline-flex flex-col relative w-auto">
 										<a class="text-white hover:text-primary" href="#wrap">
 											<span>Pages</span>
@@ -145,11 +140,13 @@
 											</li>
 										</ul>
 									</li>
+									-->
+
 									<li class="inline-flex flex-col relative w-auto">
-										<a class="text-white hover:text-primary" href="#news">News<sup class="link-sup">05</sup></a>
+										<a class="text-white hover:text-primary" href="#news">VR<sup class="link-sup"></sup></a>
 									</li>
 									<li class="inline-flex flex-col relative w-auto">
-										<a class="text-white hover:text-primary" href="./page-company-contact.html">Contact<sup class="link-sup">06</sup></a>
+										<a class="text-white hover:text-primary" href="./page-company-contact.html">Contact<sup class="link-sup"></sup></a>
 									</li>
 								</ul>
 							</div>
@@ -252,13 +249,13 @@
 													</svg>
 												</span>
 											</mark>
-											<span>Multibank technology</span>
+											<span>MultiCode Namibia</span>
 										</h1>
 									</div>
 									<div data-custom-animations="true" data-ca-options='{"animationTarget": ".animation-element", "ease": "power4.out"}'>
 										<div class="animation-element" data-custom-animations="true" data-ca-options='{"animationTarget": ".animation-element", "startDelay" : 800 , "ease": "power4.out", "initValues": {"y": "50px", "opacity" : 0} , "animations": {"y": "0px", "opacity" : 1}}'>
 											<div style="text-align: center;" class="ld-fancy-heading pr-10percent relative animation-element">
-												<p class="ld-fh-element inline-block relative text-22 font-normal leading-1/6em mb-1/5em text-white-70">Developers of Integrated ICT Solutions</p>
+												<p class="ld-fh-element inline-block relative text-22 font-normal leading-1/6em mb-1/5em text-white-70">MultiCode specializes in Virtual Reality (VR) Experiences and Mobile App Development.</p>
 											</div>
 											<a style="display: none;" href="#contact" class="btn btn-solid btn-md font-bold btn-icon-right btn-hover-reveal whitespace-nowrap text-16 rounded-4 text-secondary bg-primary py-15 px-55 hover:text-white hover:bg-secondary animation-element" data-localscroll="true">
 												<span class="btn-txt" data-text="Get a quote">Get a quote</span>
@@ -1048,7 +1045,7 @@
 							<div class="col col-12 col-xl-4">
 								<div class="mr-50 mb-30 flex flex-col">
 									<div class="mb-35">
-										<img src="./assets/images/demo/company/logo.svg" alt="Hub Company">
+										<img src="./assets/images/demo/company/multicode-logo-2.png'\" alt="Hub Company">
 									</div>
 									<div class="ld-fancy-heading relative">
 										<p class="mb-3em text-white opacity-50 inline-block relative">Hub IT allows your business and technology computers to store, transmit, analyze, and manipulate big data.</p>
@@ -1105,7 +1102,7 @@
 										<div class="contents flex flex-col">
 											<h3 class="lqd-iconbox-heading opacity-50 text-white text-13 font-normal leading-1em mb-0">Looking for collaboration? </h3>
 											<p>
-												<span class="text-16 text-white">hub@liquid.com</span>
+												<span class="text-16 text-white">sales@mbt.com.na</span>
 											</p>
 										</div>
 									</div>
@@ -1120,7 +1117,7 @@
 										<div class="contents flex flex-col">
 											<h3 class="lqd-iconbox-heading opacity-50 text-white text-13 font-normal leading-1em mb-0">Visit our Local Store </h3>
 											<p>
-												<span class="text-16 text-white">14th Street, Soho</span>
+												<span class="text-16 text-white">Maerua Mall GoWork Office Windhoek</span>
 											</p>
 										</div>
 									</div>
@@ -1135,7 +1132,7 @@
 										<div class="contents flex flex-col">
 											<h3 class="lqd-iconbox-heading opacity-50 text-white text-13 font-normal leading-1em mb-0">Monday-Friday: 08am-9pm </h3>
 											<p>
-												<span class="text-16 text-white">+(1) 123 456 7890</span>
+												<span class="text-16 text-white">+264 81 241 8177</span>
 											</p>
 										</div>
 									</div>
@@ -1205,7 +1202,7 @@
 						<div class="row justify-between">
 							<div class="col col-12 col-md-4">
 								<div class="ld-fancy-heading relative">
-									<p class="ld-fh-element text-13 text-white-50 inline-block relative mb-0/5em">Copyright ©2020 Hub Corporation.</p>
+									<p class="ld-fh-element text-13 text-white-50 inline-block relative mb-0/5em">Copyright ©2024 Multicode Namibia.</p>
 								</div>
 							</div>
 							<div class="col col-12 col-md-8 text-end sm:text-start">
