--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 							<h6 class="mt-1em text-white">
 								<span class="text-13 text-inherit">call us now</span>
 								<br>
-								<span class="text-primary text-16">+1 714 7788</span>
+								<span class="text-primary text-16">+264 81 241 8177</span>
 							</h6>
 						</div>
 					</div>
@@ -1045,10 +1045,10 @@
 							<div class="col col-12 col-xl-4">
 								<div class="mr-50 mb-30 flex flex-col">
 									<div class="mb-35">
-										<img src="./assets/images/demo/company/multicode-logo-2.png'\" alt="Hub Company">
+										<img style="width: 34%;" src="./assets/images/demo/company/multicode-logo-2.png" alt="Hub Company">
 									</div>
 									<div class="ld-fancy-heading relative">
-										<p class="mb-3em text-white opacity-50 inline-block relative">Hub IT allows your business and technology computers to store, transmit, analyze, and manipulate big data.</p>
+										<p class="mb-3em text-white opacity-50 inline-block relative">MultiCode specializes in Virtual Reality (VR) Experiences and Mobile App Development</p>
 									</div>
 									<div class="module-icon -mr-10 -ml-10">
 										<ul class="reset-ul icon-list-items inline-items flex items-center mb-0">
