--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 						</button>
 						<a class="navbar-brand flex relative" href="./index-company.html">
 							<span class="navbar-brand-inner">
-								<img class="logo-default" width="74" height="21" src="./assets/images/demo/company/hub-svg-logo.svg" alt="Hub WordPress Theme">
+								<img class="logo-default" width="74" height="21" src="./assets/images/demo/company/multicode-logo-2.png" alt="Hub WordPress Theme">
 							</span>
 						</a>
 					</div>
