add the cases studies update

--- a/index.html
+++ b/index.html
@@ -296,10 +296,10 @@
 										<h6 class="ld-fh-element mb-1em inline-block relative">about us</h6>
 									</div>
 									<div class="ld-fancy-heading relative animation-element">
-										<h2 class="ld-fh-element mb-0/5em inline-block relative">consulting agency for your business.</h2>
+										<h2 class="ld-fh-element mb-0/5em inline-block relative">Virtual Reality and Code</h2>
 									</div>
 									<div class="ld-fancy-heading relative animation-element">
-										<p class="ld-fh-element mb-0/5em inline-block relative">Hub has a full range of products for personal data analysis, business consultation, and strategic partnership. Hub allows your business and technology computers to store, transmit, analyze, and manipulate big data.</p>
+										<p class="ld-fh-element mb-0/5em inline-block relative">MultiCode specializes in Virtual Reality (VR) Experiences and Mobile App Development.</p>
 									</div>
 								</div>
 								<div class="col col-12 col-xl-6 offset-xl-1 p-0">
@@ -381,7 +381,7 @@
 											<h2 class="ld-fh-element mb-0/5em inline-block relative">case studies</h2>
 										</div>
 										<div class="ld-fancy-heading relative animation-element">
-											<p class="ld-fh-element mb-0/5em inline-block relative">Hub IT allows your business and technology computers to store, transmit, analyze, and manipulate big data.</p>
+											<p class="ld-fh-element mb-0/5em inline-block relative"> Multicode Namibia We can turn any idea into a virtual reality experience!!!* Shooting an expensive property or lodge, into a VR experience for your clients, can increase the chances of a sale or people choosing your lodge for their next vacation ten fold</p>
 										</div>
 									</div>
 									<div class="w-full flex flex-wrap">
