--- a/index.html
+++ b/index.html
@@ -385,6 +385,8 @@
 										</div>
 									</div>
 									<div class="w-full flex flex-wrap">
+
+									<!--
 										<div class="w-25percent flex flex-auto p-10 lg:w-50percent sm:w-full">
 											<div class="iconbox flex flex-grow-1 relative flex-col iconbox-default iconbox-contents-show-onhover py-25 mb-30 items-center bg-accent rounded-6 transition-bg hover:bg-secondary hover:text-secondary hover:inner-text-white lg:m-0" data-slideelement-onhover="true" data-slideelement-options='{ "visibleElement":  ".iconbox-icon-wrap, p, h3", "hiddenElement":  ".btn", "alignMid":  true, "triggerElement":  ".iconbox" }'>
 												<div class="iconbox-icon-wrap">
@@ -406,6 +408,9 @@
 												</a>
 											</div>
 										</div>
+									-->
+
+									<!--
 										<div class="w-25percent flex flex-auto p-10 lg:w-50percent sm:w-full">
 											<div class="iconbox flex flex-grow-1 relative flex-col iconbox-default iconbox-contents-show-onhover py-25 mb-30 items-center bg-accent rounded-6 transition-bg hover:bg-secondary hover:text-secondary hover:inner-text-white lg:m-0" data-slideelement-onhover="true" data-slideelement-options='{ "visibleElement":  ".iconbox-icon-wrap, p, h3", "hiddenElement":  ".btn", "alignMid":  true, "triggerElement":  ".iconbox" }'>
 												<div class="iconbox-icon-wrap">
@@ -427,7 +432,10 @@
 												</a>
 											</div>
 										</div>
-										<div class="w-25percent flex flex-auto p-10 lg:w-50percent sm:w-full">
+									-->
+
+
+										<div class="w-50percent flex flex-auto p-10 lg:w-50percent sm:w-full">
 											<div class="iconbox flex flex-grow-1 relative flex-col iconbox-default iconbox-contents-show-onhover py-25 mb-30 items-center bg-accent rounded-6 transition-bg hover:bg-secondary hover:text-secondary hover:inner-text-white lg:m-0" data-slideelement-onhover="true" data-slideelement-options='{ "visibleElement":  ".iconbox-icon-wrap, p, h3", "hiddenElement":  ".btn", "alignMid":  true, "triggerElement":  ".iconbox" }'>
 												<div class="iconbox-icon-wrap">
 													<div class="mb-25 iconbox-icon-container inline-flex w-40 text-40">
@@ -436,7 +444,7 @@
 														</svg>
 													</div>
 												</div>
-												<h3 class="lqd-iconbox-heading text-center text-16 leading-1em mb-0 inner-text-white">increase your <br> conversion rate </h3>
+												<h3 class="lqd-iconbox-heading text-center text-16 leading-1em mb-0 inner-text-white">Virtual Reality <br> Experiences </h3>
 												<a href="./page-company-services.html" target="_blank" rel="nofollow" class="btn btn-naked btn-icon-right btn-hover-swp mt-em mb-0 items-center text-15 font-bold text-white hover:text-primary">
 													<span class="btn-txt" data-text="Learn more">Learn more</span>
 													<span class="btn-icon text-16 tracking-0">
@@ -448,7 +456,8 @@
 												</a>
 											</div>
 										</div>
-										<div class="w-25percent flex flex-auto p-10 lg:w-50percent sm:w-full">
+
+										<div class="w-50percent flex flex-auto p-10 lg:w-50percent sm:w-full">
 											<div class="iconbox flex flex-grow-1 relative flex-col iconbox-default iconbox-contents-show-onhover py-25 mb-30 items-center bg-accent rounded-6 transition-bg hover:bg-secondary hover:text-secondary hover:inner-text-white lg:m-0" data-slideelement-onhover="true" data-slideelement-options='{ "visibleElement":  ".iconbox-icon-wrap, p, h3", "hiddenElement":  ".btn", "alignMid":  true, "triggerElement":  ".iconbox" }'>
 												<div class="iconbox-icon-wrap">
 													<div class="mb-25 iconbox-icon-container inline-flex w-40 text-40">
@@ -457,7 +466,7 @@
 														</svg>
 													</div>
 												</div>
-												<h3 class="lqd-iconbox-heading text-center text-16 leading-1em mb-0 inner-text-white">business startup <br> analysis </h3>
+												<h3 class="lqd-iconbox-heading text-center text-16 leading-1em mb-0 inner-text-white">Mobile Application <br> Design & Development </h3>
 												<a href="./page-company-services.html" target="_blank" rel="nofollow" class="btn btn-naked btn-icon-right btn-hover-swp mt-em mb-0 items-center text-15 font-bold text-white hover:text-primary">
 													<span class="btn-txt" data-text="Learn more">Learn more</span>
 													<span class="btn-icon text-16 tracking-0">
@@ -510,7 +519,7 @@
 							<div class="row">
 								<div class="col col-lg-12">
 									<div class="ld-fancy-heading relative text-center">
-										<p class="ld-fh-element mb-0/5em inline-block relative">Join the 10.000+ companies trusting LandingHub</p>
+										<p class="ld-fh-element mb-0/5em inline-block relative">Join the 10.000+ companies trusting Multicode</p>
 									</div>
 									<div class="w-full block pt-50">
 										<div class="carousel-container relative carousel-nav-shaped">
@@ -553,10 +562,10 @@
 								<div class="col col-12 flex flex-row flex-wrap justify-center" data-custom-animations="true" data-ca-options='{"animationTarget": ".animation-element", "duration" : 1800 , "delay" : 180 , "ease": "power4.out", "initValues": {"y": "35px", "opacity" : 0} , "animations": {"y": "0px", "opacity" : 1}}'>
 									<div class="w-45percent flex flex-col justify-center text-center mb-55 md:w-full">
 										<div class="ld-fancy-heading relative animation-element">
-											<h2 class="ld-fh-element mb-0/5em inline-block relative">global experts</h2>
+											<h2 class="ld-fh-element mb-0/5em inline-block relative">technology experts</h2>
 										</div>
 										<div class="ld-fancy-heading relative animation-element">
-											<p class="ld-fh-element mb-0/5em inline-block relative">Hub IT allows your business and technology computers to store, transmit, analyze, and manipulate big data.</p>
+											<p class="ld-fh-element mb-0/5em inline-block relative">MultiCode specializes in Virtual Reality (VR) Experiences and Mobile App Development.</p>
 										</div>
 									</div>
 									<div class="w-full"></div>
@@ -568,10 +577,10 @@
 													<div class="ld-flipbox-inner w-full flex-grow-1 items-center justify-center backface-hidden">
 														<div class="w-full flex flex-col flex-wrap items-start p-10 px-15">
 															<div class="ld-fancy-heading relative w-auto mb-2em rounded-4 bg-white">
-																<h5 class="ld-fh-element m-0 inline-block relative bg-white text-15 font-semibold leading-1em tracking-0/5 py-0/5em px-1em rounded-4">finance</h5>
+																<h5 class="ld-fh-element m-0 inline-block relative bg-white text-15 font-semibold leading-1em tracking-0/5 py-0/5em px-1em rounded-4">VR</h5>
 															</div>
 															<div class="ld-fancy-heading relative">
-																<h5 class="ld-fh-element mb-0/5em inline-block relative text-30 text-white leading-1em">banking and business partnership</h5>
+																<h5 class="ld-fh-element mb-0/5em inline-block relative text-30 text-white leading-1em"> Virtual Reality (VR) Experiences Development</h5>
 															</div>
 														</div>
 													</div>
@@ -595,10 +604,10 @@
 													<div class="ld-flipbox-inner w-full flex-grow-1 items-center justify-center backface-hidden">
 														<div class="w-full flex flex-col flex-wrap items-start p-10 px-15">
 															<div class="ld-fancy-heading relative w-auto mb-2em rounded-4 bg-white">
-																<h5 class="ld-fh-element m-0 inline-block relative bg-white text-15 font-semibold leading-1em tracking-0/5 py-0/5em px-1em rounded-4">analytics</h5>
+																<h5 class="ld-fh-element m-0 inline-block relative bg-white text-15 font-semibold leading-1em tracking-0/5 py-0/5em px-1em rounded-4">Mobile Applications</h5>
 															</div>
 															<div class="ld-fancy-heading relative">
-																<h5 class="ld-fh-element mb-0/5em inline-block relative text-30 text-white leading-1em">big data integration for startups</h5>
+																<h5 class="ld-fh-element mb-0/5em inline-block relative text-30 text-white leading-1em">Mobile Applications Development</h5>
 															</div>
 														</div>
 													</div>
@@ -630,7 +639,7 @@
 																<h5 class="ld-fh-element m-0 inline-block relative bg-white text-15 font-semibold leading-1em tracking-0/5 py-0/5em px-1em rounded-4">consulting</h5>
 															</div>
 															<div class="ld-fancy-heading relative">
-																<h5 class="ld-fh-element mb-0/5em inline-block relative text-30 text-white leading-1em">analyzing company reports</h5>
+																<h5 class="ld-fh-element mb-0/5em inline-block relative text-30 text-white leading-1em">SAP ERP Systems</h5>
 															</div>
 														</div>
 													</div>
@@ -653,7 +662,7 @@
 					<!-- End Consultation -->
 
 					<!-- Start Has Accordion -->
-					<section class="lqd-section has-accordion pt-60 pb-120">
+					<section style="display: none;" class="lqd-section has-accordion pt-60 pb-120">
 						<div class="container">
 							<div class="row items-center">
 								<div class="col col-12 col-xl-5" data-custom-animations="true" data-ca-options='{"animationTarget": ".animation-element", "duration" : 1800 , "delay" : 180 , "ease": "power4.out", "initValues": {"y": "35px", "opacity" : 0} , "animations": {"y": "0px", "opacity" : 1}}'data-localscroll="true" data-localscroll-options='{"itemsSelector":"a"}'>
@@ -768,7 +777,7 @@
 											<h2 class="ld-fh-element mb-0/5em inline-block relative lqd-highlight-classic lqd-highlight-grow-left">Investing in the digital future.</h2>
 										</div>
 										<div class="ld-fancy-heading pb-0/5em relative animation-element">
-											<p class="ld-fh-element mb-1/25em inline-block relative lqd-highlight-classic lqd-highlight-grow-left">Hub IT allows your business and technology computers to store, transmit, analyze, and manipulate big data in the digital world.</p>
+											<p class="ld-fh-element mb-1/25em inline-block relative lqd-highlight-classic lqd-highlight-grow-left">MULTIBANK TECHNOLOGY is a Namibian IT consultancy firm that specializes in the development, management and support of various forms IT hardware and software.</p>
 										</div>
 										<div class="mb-20 iconbox flex flex-grow-1 relative items-center iconbox-side animation-element">
 											<div class="iconbox-icon-wrap">
@@ -776,7 +785,7 @@
 													<i aria-hidden="true" class="text-secondary lqd-icn-ess icon-ion-ios-checkmark"></i>
 												</div>
 											</div>
-											<h3 class="lqd-iconbox-heading text-16 font-bold m-0">Business-Plan Consulting </h3>
+											<h3 class="lqd-iconbox-heading text-16 font-bold m-0">Virtual Reality Development </h3>
 										</div>
 										<div class="mb-40 iconbox flex flex-grow-1 relative items-center iconbox-side animation-element">
 											<div class="iconbox-icon-wrap">
@@ -784,7 +793,7 @@
 													<i aria-hidden="true" class="text-secondary lqd-icn-ess icon-ion-ios-checkmark"></i>
 												</div>
 											</div>
-											<h3 class="lqd-iconbox-heading text-16 font-bold m-0">First-Class Investments </h3>
+											<h3 class="lqd-iconbox-heading text-16 font-bold m-0">Website & Mobile Development </h3>
 										</div>
 										<a href="#contact-modal" class="btn btn-solid btn-md font-bold btn-icon-right btn-hover-reveal text-16 text-secondary bg-primary rounded-4 hover:bg-secondary hover:text-white animation-element" data-lity="#contact-modal">
 											<span class="btn-txt" data-text="Get a quote">Get a quote</span>
@@ -800,7 +809,7 @@
 					<!-- End What We Do -->
 
 					<!-- Start Subscribe -->
-					<section class="lqd-section subscribe pt-40 pb-180">
+					<section style="display: none;" class="lqd-section subscribe pt-40 pb-180">
 						<div class="container">
 							<div class="row">
 								<div class="col col-12 flex flex-wrap pt-35 pb-25 border-1 border-black-10 rounded-100 transition-all lg:border-0">
@@ -916,9 +925,9 @@
 									<div class="w-45percent flex flex-col mx-auto lg:w-full" data-custom-animations="true" data-ca-options='{"addChildTimelines": false, "animationTarget": ".animation-element", "duration" : 1800 , "delay" : 180 , "ease": "power4.out", "initValues": {"y": "35px"} , "animations": {"y": "0px"}}'>
 										<div class="flex flex-col text-center mb-35">
 											<div class="ld-fancy-heading relative animation-element">
-												<h2 class="ld-fh-element mb-0/5em inline-block relative lqd-highlight-classic lqd-highlight-grow-left">hub news</h2>
+												<h2 class="ld-fh-element mb-0/5em inline-block relative lqd-highlight-classic lqd-highlight-grow-left">Multicode News</h2>
 											</div>
-											<div class="ld-fancy-heading relative animation-element">
+											<div style="display: none;" class="ld-fancy-heading relative animation-element">
 												<p class="ld-fh-element mb-0/5em inline-block relative lqd-highlight-classic lqd-highlight-grow-left p">Hub IT allows your business and technology computers to store, transmit, analyze, and manipulate big data.</p>
 											</div>
 										</div>
